<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/colorPrimary"
	android:gravity="center"
	>

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="120dp"
		android:layout_marginTop="-80dp"
		android:src="@drawable/ic_storage_permission"
		android:contentDescription="@string/description_storage_permission_icon"
		/>

	<TextView
		android:layout_width="250dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/fabMargin"
		android:text="@string/permissionMessage"
		android:textSize="@dimen/textLarge"
		android:textAlignment="center"
		android:textColor="@color/colorTextPrimaryDark"
		android:layout_gravity="center"
		/>

	<Button
		android:id="@+id/buttonGrantPermission"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="@dimen/buttonPaddingLarge"
		android:layout_marginTop="@dimen/screenMargin"
		android:background="@drawable/style_button_alpha"
		android:text="@string/grantPermission"
		android:textColor="@color/colorTextPrimary"
		android:stateListAnimator="@null"
		/>

</LinearLayout>