<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="mohsen.muhammad.minimalistmusicplayer.MainActivityFragment"
	tools:showIn="@layout/main_activity"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimaryDark"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		>

		<!--Breadcrumb bar-->
		<android.support.design.widget.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:theme="@style/AppTheme.AppBarOverlay"
			>

			<LinearLayout
				android:id="@+id/breadcrumbs"
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:layout_marginStart="2dp"
				android:layout_marginEnd="2dp"
				android:layout_gravity="center_vertical"
				android:gravity="center_vertical"
				>

				<!--back button-->
				<ImageButton
					android:id="@+id/imageButtonBack"
					android:layout_width="45dp"
					android:layout_height="wrap_content"
					android:padding="@dimen/buttonPaddingLarge"
					android:background="@drawable/style_button_alpha"
					android:adjustViewBounds="true"
					android:scaleType="fitCenter"
					android:src="@drawable/anim_back_root"
					android:contentDescription="@string/descriptionButtonRepeat"
					/>

				<android.support.v7.widget.RecyclerView
					android:id="@+id/recyclerViewBreadcrumbs"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					app:layoutManager="LinearLayoutManager"
					android:orientation="horizontal"
					tools:listitem="@layout/breadcrumb_crumb"
					/>

			</LinearLayout>

		</android.support.design.widget.AppBarLayout>

		<!--Explorer-->
		<android.support.v7.widget.RecyclerView
			android:id="@+id/recyclerViewExplorer"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			app:layoutManager="LinearLayoutManager"
			android:scrollbars="vertical"
			style="@style/scrollbar_style"
			tools:listitem="@layout/track_list_item"
			/>

		<!--Controls-->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			>

			<!--Seek-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:background="@color/colorTextPrimaryDark"
				>

				<TextView
					android:id="@+id/textViewCurrentSeek"
					android:layout_width="0dp"
					android:layout_height="@dimen/seekHeight"
					android:layout_weight="1"
					android:gravity="center"
					tools:text="02:35"
					android:textSize="@dimen/textSmall"
					android:textColor="@color/colorTextPrimary"
					android:background="@color/colorAccent"
					android:text="@string/blankTimestamp"
					/>

				<!-- Note how nastily the left/right padding is removed -->
				<SeekBar
					android:id="@+id/seekBar"
					android:layout_width="0dp"
					android:layout_height="@dimen/seekHeight"
					android:layout_weight="6"
					android:layout_marginStart="-16.2dp"
					android:layout_marginEnd="-13dp"
					android:max="100"
					android:progress="100"
					android:thumb="@drawable/style_seek_bar_thumb"
					android:progressDrawable="@drawable/style_seek_bar_progress"
					/>

				<TextView
					android:id="@+id/textViewDuration"
					android:layout_width="0dp"
					android:layout_height="@dimen/seekHeight"
					android:layout_weight="1"
					android:gravity="center"
					tools:text="04:25"
					android:textSize="@dimen/textSmall"
					android:textColor="@color/colorTextPrimary"
					android:background="@color/colorTextPrimaryDark"
					android:text="@string/blankTimestamp"
					/>

			</LinearLayout>

			<!--track title-->
			<TextView
				android:id="@+id/textViewTrackTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="50dp"
				android:layout_marginRight="50dp"
				android:textColor="@color/colorTextPrimary"
				android:textSize="@dimen/textLarge"
				android:textStyle="bold"
				android:textAlignment="center"
				android:maxLines="1"
				android:ellipsize="end"
				tools:text="Song title"
				android:text="@string/minimalistMusicPlayer"
				/>

			<!--album/artist-->
			<TextView
				android:id="@+id/textViewTrackAlbumArtist"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="50dp"
				android:layout_marginRight="50dp"
				android:layout_marginBottom="8dp"
				android:textColor="@color/colorTextPrimaryDark"
				android:textSize="@dimen/textSmall"
				android:textAlignment="center"
				android:maxLines="1"
				android:ellipsize="end"
				tools:text="Song Album (Song Artist)"
				android:text="@string/welcomeMessage"
				/>

			<!--Buttons-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="50dp"
				android:orientation="horizontal"
				android:paddingLeft="25dp"
				android:paddingRight="25dp"
				>

				<ImageButton
					android:id="@+id/imageButtonRepeat"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="@dimen/buttonPaddingLarge"
					android:background="@drawable/style_button_alpha"
					android:adjustViewBounds="true"
					android:scaleType="fitCenter"
					android:src="@drawable/repeat000"
					android:contentDescription="@string/descriptionButtonRepeat"
					/>

				<ImageButton
					android:id="@+id/imageButtonPrevious"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="@dimen/buttonPaddingLarge"
					android:background="@drawable/style_button_alpha"
					android:adjustViewBounds="true"
					android:scaleType="fitCenter"
					android:src="@drawable/next000"
					android:rotation="180"
					android:contentDescription="@string/descriptionButtonPrevious"
					/>

				<ImageButton
					android:id="@+id/imageButtonPlayPause"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="@dimen/buttonPaddingLarge"
					android:background="@drawable/style_button_alpha"
					android:adjustViewBounds="true"
					android:scaleType="fitCenter"
					android:src="@drawable/play000"
					android:contentDescription="@string/descriptionButtonPlayPause"
					/>

				<ImageButton
					android:id="@+id/imageButtonNext"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="@dimen/buttonPaddingLarge"
					android:background="@drawable/style_button_alpha"
					android:adjustViewBounds="true"
					android:contentDescription="@string/descriptionButtonNext"
					android:scaleType="fitCenter"
					android:src="@drawable/next000"
					/>

				<ImageButton
					android:id="@+id/imageButtonShuffle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:padding="@dimen/buttonPaddingLarge"
					android:background="@drawable/style_button_alpha"
					android:adjustViewBounds="true"
					android:scaleType="fitCenter"
					android:src="@drawable/shuffle000"
					android:contentDescription="@string/descriptionButtonShuffle"
					/>

			</LinearLayout>
		</LinearLayout>

	</LinearLayout>

	<!--Permission layout-->
	<!--Visibility is set to gone if the storage permission is granted-->
	<include
		android:id="@+id/layoutPermission"
		layout="@layout/permission_request"
		/>

</FrameLayout>